# DspEmulator

./: CMakeLists.txt  README.md
src/: config.cfg  dspCoeffs.cpp  dspCoeffs.h  dspPars.cpp  dspPars.h  eclDspEmulator.cpp  eclDspEmulator.h  eclFitHit.cpp  eclFitHit.h  eclFitHitLinkDef.h  eclSDSPTester.cpp  eclSDSPTester.h  main.cpp  popt.cpp  popt.h
